# natsume-backend

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  renovate.json
.github/workflows/: docker.yml  lint.yml  test.yml
config/: status.toml
crates/api/: Cargo.toml
crates/api/src/: audit.rs  main.rs
crates/api/src/models/: item.rs  response.rs
crates/api/src/models/items/: armor.rs  base.rs  food.rs  mod.rs  tool.rs
crates/api/src/routes/: files.rs  items.rs  mod.rs  recipes.rs
crates/api/src/routes/audit_logs/: mod.rs
crates/api/src/routes/auth/: mod.rs
crates/api/src/routes/files/: mod.rs
crates/api/src/routes/items/: mod.rs
crates/api/src/routes/recipes/: mod.rs
crates/api/src/routes/status/: mod.rs
crates/api/src/routes/tickets/: mod.rs
crates/api/src/routes/ws/: mod.rs
crates/api/src/utils/: db.rs  errors.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/files/: usecase.rs
crates/application/src/items/: usecase.rs
crates/application/src/recipes/: usecase.rs
crates/application/src/status/: usecase.rs
crates/application/src/tickets/: usecase.rs
crates/domain/: Cargo.toml
crates/domain/src/: files.rs  lib.rs
crates/domain/src/files/: mod.rs
crates/domain/src/items/: base.rs  food.rs  mod.rs  tool.rs  weapon.rs
crates/domain/src/recipes/: mod.rs
crates/domain/src/status/: mod.rs
crates/domain/src/tickets/: mod.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  status_watcher.rs
crates/infrastructure/src/postgres/: item_repository.rs  mod.rs  pools.rs
crates/infrastructure/src/repositorys/: mod.rs
crates/infrastructure/src/repositorys/file/: mod.rs
crates/infrastructure/src/repositorys/item/: mod.rs
crates/infrastructure/src/repositorys/recipe/: mod.rs
crates/infrastructure/src/repositorys/status/: mod.rs
crates/infrastructure/src/repositorys/ticket/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  id.rs  lib.rs
migrations/: 20250420215834_create_items_table.sql  20250422051840_create_recipes_table.sql  20250422143815_create_files_table.sql  20250428065409_create_status_table.sql  20250430224935_add_tags_to_items.sql  20250506213809_add_new_item_categories.sql  20260120103154_update_items_schema.sql  20260122090000_create_item_audit_logs.sql  20260122123000_create_file_uploads_table.sql  20260122133000_add_uploader_to_files.sql  20260122150000_fix_legacy_custom_model_data.sql  20260227000000_create_audit_logs.sql
