[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/shared",
]

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.3", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "registry", "env-filter"] }
dotenvy = "0.15"