[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { version = "0.1.0", path = "../application" }
axum = "0.8.3"
domain = { version = "0.1.0", path = "../domain" }
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"
shared = { version = "0.1.0", path = "../shared" }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
dotenvy = "0.15"