[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "catch-panic"] }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
futures = "0.3"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "macros", "json"] }
reqwest = { version = "0.13.0", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["v4"] }
application = { path = "../application" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }
